# lawgraph

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: pre-commit.yaml
docs/: api.md  architecture.md  cli.md  configuration.md  graph_model.md  index.md  pipelines.md  profiles.md  semantic_edges.md
scripts/: export_openapi.py
src/config/: config.py  strafrecht.yml
src/lawgraph/: db.py  logging.py  models.py
src/lawgraph/api/: __init__.py  app.py  dependencies.py  queries.py  schemas.py
src/lawgraph/api/routes/: __init__.py  articles.py  judgments.py  nodes.py
src/lawgraph/cli/: case_law.py  eu_law.py  normalize_all.py  normalize_bwb.py  normalize_eurlex.py  normalize_rechtspraak.py  normalize_tk.py  parliament.py  retrieve_all.py  retrieve_bwb.py  retrieve_eurlex.py  retrieve_helpers.py  retrieve_rechtspraak.py  retrieve_tk.py  semantic_all.py  semantic_bwb_articles.py  semantic_eu_articles.py  semantic_rechtspraak_articles.py  semantic_tk_articles.py  strafrecht_seed.py
src/lawgraph/clients/: base.py  bwb.py  eu.py  rechtspraak.py  tk.py
src/lawgraph/config/: __init__.py  settings.py
src/lawgraph/pipelines/: strafrecht_seed.py
src/lawgraph/pipelines/normalize/: base.py  bwb.py  eurlex.py  rechtspraak.py  tk.py
src/lawgraph/pipelines/retrieve/: __init__.py  base.py  bwb.py  eurlex.py  rechtspraak.py  tk.py
src/lawgraph/pipelines/semantic/: __init__.py  bwb_articles.py  bwb_detect.py  eu_articles.py  rechtspraak_articles.py  tk_articles.py
src/lawgraph/utils/: display.py  time.py
tests/: conftest.py  test_clients.py  test_network.py  test_retrieve_sources_pipeline.py  test_semantic_eu_articles.py  test_semantic_rechtspraak_articles.py  test_semantic_tk_articles.py  test_smoke.py
tests/api/: test_articles_api.py  test_judgments_api.py  test_nodes_api.py
tests/semantic/: __init__.py  test_bwb_article_detection.py  test_bwb_articles_pipeline.py
